# AssistArena

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
assets/: fallback_config.json  stadiums.json
backend/: __init__.py  actions.py  copilot.py  database.py  fallback.py  limiter.py  models.py  server.py
frontend/: index.html  main.js  theme.css
tests/: conftest.py  test_actions.py  test_copilot.py  test_database.py  test_fallback.py  test_integration.py  test_server.py  test_validation.py
