[project]
name = "assistarena"
version = "1.0.0"
description = "AssistArena — accessibility-first stadium operations copilot (FIFA World Cup 2026)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "google-genai>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:google.genai.types",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff rules
    "COM812", # missing trailing comma
    "ANN401", # disallow bare Any
    "BLE001", # no blind except Exception
    "D104",   # undocumented public package
    "D107",   # undocumented __init__
    "D205",   # blank line after docstring summary
    "D209",   # multi-line docstring closing quotes
    "D401",   # docstring summary in imperative mood
    "FAST001", # redundant response_model
    "FAST002", # FastAPI dependency without Annotated
    "PLC0415", # import not at top-level
    "PLR0911", # too many returns
    "PLW0603", # global statements
    "S311",    # non-cryptographic random
]
allowed-confusables = ["ا", "أ", "إ", "آ", "ئ", "ي", "و", "ه"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N801", "PLC0415", "ANN401", "E501", "D107"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.interrogate]
fail-under = 100

[tool.coverage.run]
source = ["backend"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
